fix calculator width on mobile screen

--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ body{
     padding: 4px;
     border: 7px solid black;
     border-radius: 10px;
-    min-width: 400px;
     height: 500px;
+    width: 400px;
+    margin: 0px 3px;
 }
+
 .calculator-container > button {
     font-size: 25px;
     border-radius: 3px;
